--- a/.github/workflows/stale.yml
+++ b/.github/workflows/stale.yml
@@ -23,6 +23,7 @@ permissions:
 
 jobs:
   stale:
+    if: github.repository_owner == 'GoogleCloudPlatform'
     runs-on: ubuntu-latest
     steps:
     - uses: actions/stale@1160a2240286f5da8ec72b1c0816ce2481aabf84 # v8
