--- a/.github/workflows/test-cli.yml
+++ b/.github/workflows/test-cli.yml
@@ -37,4 +37,4 @@ jobs:
         go-version-file: cli/go.mod
         cache-dependency-path: cli/go.sum
     - run: |-
-        make -C ./cli test
+        make test
