--- a/.github/workflows/test-cli.yml
+++ b/.github/workflows/test-cli.yml
@@ -29,7 +29,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        operating-system: [ubuntu-latest, macos-latest]
+        operating-system: [ubuntu-latest]
     steps:
     - uses: actions/checkout@3df4ab11eba7bda6032a0b82a6bb43b11571feac # v4
     - uses: actions/setup-go@93397bea11091df50f3d7e59dc26a7711a8bcfbe # v4
@@ -37,4 +37,4 @@ jobs:
         go-version-file: cli/go.mod
         cache-dependency-path: cli/go.sum
     - run: |-
-        go test ./... -v
+        make test
