--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,5 +1,19 @@
+exclude: |
+  (?x)^(
+    config-connector/.*|
+    dm/.*|
+    reports/.*|
+    cli/testdata/.*|
+    cli/bptest/.*
+  )$
 repos:
   - repo: https://github.com/renovatebot/pre-commit-hooks
     rev: 36.40.3
     hooks:
       - id: renovate-config-validator
+  - repo: https://github.com/pre-commit/pre-commit-hooks
+    rev: v4.4.0
+    hooks:
+      - id: check-yaml
+      - id: end-of-file-fixer
+      - id: trailing-whitespace
