--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -14,6 +14,13 @@ name: "CodeQL"
 on:
   push:
     branches: [ "master" ]
+  pull_request:
+    branches: [ "master" ]
+    paths:
+      - '**/*.go'
+      - '**/*.js'
+      - '**/*.py'
+      - '**/*.rb'
   schedule:
     - cron: '32 11 * * 0'
 
